# fridge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  kube.yaml  kv-customise-cr.yaml  longhorn-drive.yml  simple_test_azure_deployment.md  ubuntu-desktop.yaml
.devcontainer/: devcontainer.Dockerfile  devcontainer.json  docker-compose.yml  kind-config.yaml  post-create.sh
.devcontainer/scripts/: Install-Cillium.sh  init-pulumi.py  pulumi-setup.sh
.github/workflows/: api-server-container.yaml  ci.yaml  docs.yaml
cinder-luks/: block.yaml
common/: hubble-ui.yml  longhorn-storage-class.yaml
doc/: data-storage-layout.excalidraw
docs/: Adding a new enviroment.md  abbreviations.yml  index.md  mkdocs.yml  myst.yml  package-lock.json  package.json  requirements.in  requirements.txt  style.css
docs/architecture/: architecture.md  defence_in_depth.md  introduction.md  lifecycle.md  responsibility_and_5_safes.md  roles.md  shared_gov_model.md  shared_responsibility.md
docs/attacks/: README.md  fridge.deciduous.yaml
docs/deploy/: infrastructure.md  netbird.md  overview.md  prerequisites.md  services.md
docs/docs/: deploy_services.md
fridge-job-api/: Dockerfile  Makefile  README.md  main.py  package-lock.json  pyproject.toml
fridge-job-api/app/: main.py  minio_client.py
kv-single-vm/: values.yaml
scripts/: Install-Cillium.sh  kind-rebuild-cluster.sh
workflow-based/: argo-service-accounts.yaml  argo-workflow-setup.md  minio-tenant-ingress.yaml  minio-tenant-values.yaml  values-argo-workflows.yaml  workflow-minio-secret.yaml
(+306 files in other folders)
