[project]
name = "fridge-job-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi-azure-auth>=5.1.1",
    "fastapi[standard]>=0.115.14",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "requests-auth>=8.0.0",
    "requests-oauthlib>=2.0.0",
]
