[project]
name = "fridge-job-api"
version = "0.1.0"
description = "An API for managing and monitoring jobs in the FRIDGE system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "kubernetes>=33.1.0",
    "requests>=2.32.4",
]
